# whistlenet

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  environment.yaml  kernel_fitting.ipynb  main.ipynb  main_colab.ipynb  main_lightning.ipynb  pyproject.toml  requirements.txt  results.txt  test.ipynb  whistle_main.ipynb
.aim/: run_metadata.sqlite
config/: audiomnist_config.yaml  config.py  config.yaml  enums.py  fitting_config.yaml  whistle.yaml  whistle_config.yaml
core/: __init__.py  dataset.py  model.py  trainer.py  utils.py
core/nn/: __init__.py  linear.py  mlp.py
cpp/: AudioData.h  AudioPlayer.cpp  AudioPlayer.h  AudioRecorder.cpp  AudioRecorder.h  CMakeLists.txt  test.cpp
data/whistle/: annotate_whistle.py
data/whistle/labels/: B-Human_TestGORE22_1stHalf.txt  HTWK_Dutch_05_04_2017-2.txt  HTWK_Dutch_05_04_2017.txt  HTWK_HULKs_1930_2016_04_29.txt  HULKs_GORE22_1stHalf.txt  Invisibles_1stHalf_20220308_134333_2.txt  KronosTest3_RC22.txt  KronosTest_RC22.txt  LUnitedvsUPenn20170728.txt  LUnitedvsUPenn20170728Half2.txt  Lab_Fox40_vs_printed.txt  MystiqueAudioTest22.txt  Nao-Team-HTWK_1stHalf_20220314_131241_3.txt  Nao-Team-HTWK_1stHalf_20220314_135746_3.txt  Proteus_M1M2.txt  Proteus_M3.txt  Proteus_M4.txt  Quicksilver_M1M2.txt  Quicksilver_M3.txt  Quicksilver_M4.txt  RedSkull_M1M2.txt  RedSkull_M3.txt  RedSkull_M4.txt  SPQR-Team_GORE22_1stHalf.txt  SPQR_1.txt  SRC_Dutch_05-04-2017.txt  TestBHuman_03_05_2017_1413.txt  Thanos_M1M2.txt  Thanos_M3.txt  Thanos_M4.txt  Ultron_M1M2.txt  Ultron_M3.txt  Ultron_M4.txt  dortbunt.txt  robotRotations_M1M2.txt  robotRotations_M3.txt  robotRotations_M4.txt  test_pc.txt  whistleFail_around_190.txt  whistlePositionsAndTypes_M1M2.txt  (+12 more)
datamodules/: __init__.py  mnist.py  whistle.py
doc/: README.md
docs/: TODO.md
function_fitting/: fit_function.py
model-weights/executorch/fc/: model.pte
model-weights/torch/mnist/: model.pt  test_scores.pt
models/: whistle.onnx
models/audiomnist/enn/: test_scores.pt
models/ccnn1/: ccnn1_config.yaml  model.pt  whistle.onnx
models/ccnn2/: model.pt
models/ccnn3/: ccnn3_config.yaml  model.pt
models/ccnn4/: ccnn4_config.yaml  model.pt
models/ccnn5/: ccnn5_config.yaml  model.pt
models/ccnn6/: ccnn6_config.yaml  model.pt  train_scores.pt  whistle.onnx
models/cnn/: cnn_config.yaml  model.pt  test_scores.pt  whistle.onnx
models/executorch/: model.pte
models/mnist/: model.pt  test_scores.pt
models/mnist_cnn/: cnn.py  config.py
models/mnist_cnn/saved/: model.pt
models/test1_ccnn/: model.pt  test_scores.pt
models/torch/mnist/: model.pt  test_scores.pt
models/whistle/boh/: model.pt
models/whistle/smotenn/: model.pt
models/whistle/tensorflow/: WhistleNetMk16.h5  model.onnx
models/whistle/test2/: model.pt  test_scores.pt
models/whistlenet/: model.pt  whistlenet.py  whistlenet_config.yaml
papers/: notes.md
scripts/: build_executorch.sh  install_executorch.sh
src/: audiomnist.ipynb  audiomnist_main.ipynb  mnist.ipynb  mnist_main.py  whistle.ipynb  whistle_main.ipynb
src/audiocpp/: AudioRecorder.cpp  test.cpp
src/audiolib/: AudioRecorder.h
src/ckconv/: __init__.py  ckblock.py  ckconv.py  config.py  customlayers.py  expression.py  kernelnet.py  linear.py
src/core/: __init__.py  audio.py  convutils.py  dataset.py  model.py  trainer.py  utils.py
src/core/inference/: executorchmodel.py  onnxmodel.py
src/core/nn/: __init__.py  ckconv.py  config.py  convutils.py  kernelnet.py  ops.py
src/data/: __init__.py  audiomnist.py  mnist.py  whistle.py
src/datamodules/: audiomnist.py  mnist.py  whistle.py
src/edge/: __init__.py  onnx.py  onnxdynamo.py  onnxmodel.py
src/executorch/: executorch-extras.ipynb  executorch-fundamentals.ipynb  sdk-stuff.ipynb
src/executorch/cpp/: CMakeLists.txt  example.cpp  find-executorch.cmake  kernel.cmake
src/executorch/cpp/cnn/: model.pte  op.yaml
src/executorch/cpp/cnn_ops/: CMakeLists.txt  model.pte
src/executorch/cpp/fc_ops/: CMakeLists.txt  model.pte  ops.yaml
src/executorch/install/: README.md  install.sh  miniconda-install.sh  requirements.txt
src/executorch/utils/: build.sh  install.sh
src/models/: __init__.py  ccnn.py  cnn.py  toymodel.py  whistlenet.py
src/models/mnist_cnn/: cnn.py  config.py
src/models/whistlenet/: TODO.md  config.py  whistlenet.py
src/tests/: export.ipynb
src/tests/cpp_inference/: CMakeLists.txt  main.cpp
src/tests/executorch/: CMakeLists.txt  export.ipynb  find-executorch.cmake  main.cpp
src/tests/executorch-sdk/: export_utils.py  sdk-stuff.ipynb
src/tests/executorch/cnn/: kernel.cmake  model.pte  op.yaml
src/tests/executorch/fc/: kernel.cmake  model.pte
src/tests/function_fitting/: config.yaml  fit_function.ipynb  fit_function.py  functions.py
src/utils/: __init__.py  annotate_whistle.py  plotting.py  utils.py
tests/: audiomnist.ipynb  ccnn.ipynb  export.ipynb  test.ipynb  whistle.ipynb
tests/ccnn/: ccnn.ipynb  config.yaml  export.ipynb  whistle_ccnn.ipynb
tests/function_fitting/: config.yaml  fit_function.ipynb  function_fitting.ipynb  functions.py
tests/kan/: kan.ipynb
tests/kernel_fitting/: config.yaml  functions.py  kernel_fitting.ipynb
weights/audiomnist/smotenn/: test_scores.pt
weights/cnn/: model.pt
weights/whistle/boh/: test_scores.pt
weights/whistle/smotenn/: model.pt  training_time.pt
whistlenet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
whistlenet/ckconv/: __init__.py
whistlenet/ckconv/kernels/: __init__.py  kernelnet.py  magnet.py  mfn.py  mlp.py  siren.py
whistlenet/ckconv/layers/: ckblock.py  ckconv.py  flexconv.py
whistlenet/core/: __init__.py  dataset.py  hpo.py  lightning_trainer.py  model.py  trainer.py
whistlenet/core/layers/: __init__.py  activations.py  causal_conv_1d.py  layer_norm.py
whistlenet/data/: __init__.py  audiomnist.py  whistle.py  whistle_dataset.py
whistlenet/edge/: __init__.py  onnx.py  onnxdynamo.py
whistlenet/models/: __init__.py  baseline.py  whistlenet.py
whistlenet/scripts/: kernel_fitting.ipynb  main_audiomnist.ipynb  main_whistle.ipynb  main_whistle_colab.ipynb
(+66 files in other folders)
