[project]
authors = [{name = "neverorfrog", email = "97flavio.maiorana@gmail.com"}]
description = "Add a short description here"
name = "whistlenet"
requires-python = "== 3.9"
version = "0.1.0"
dependencies = ["onnxscript>=0.1.0.dev20250114,<0.2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["whistlenet"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
whistlenet = { path = ".", editable = true }

[tool.pixi.dependencies]
tqdm = ">=4.67.1,<5"
matplotlib = ">=3.9.1,<4"
pytorch-cpu = ">=2.3.1,<3"
omegaconf = ">=2.3.0,<3"
librosa = ">=0.10.2.post1,<0.11"
ipykernel = ">=6.29.5,<7"
lightning = ">=2.5.0.post0,<3"
imbalanced-learn = ">=0.12.4,<0.13"
pre-commit = ">=4.0.1,<5"
scikit-learn = ">=1.6.1,<2"
pyyaml = ">=6.0.2,<7"
scipy = ">=1.13.1,<2"
onnx = ">=1.16.2,<2"
onnxruntime = ">=1.19.2,<2"
pandas = ">=2.2.3,<3"
gdown = ">=5.2.0,<6"
wandb = ">=0.19.4,<0.20"
aim = ">=3.20.1,<4"
seaborn = ">=0.13.2,<0.14"
optuna = ">=4.2.0,<5"
